--- a/client/src/components/simsettings.css
+++ b/client/src/components/simsettings.css
@@ -5,7 +5,8 @@ div.simset_settings {
   max-width: 90vw;
 
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 
